- Created BlogPostForm to create and/or update blog posts - Created Modal component to display BlogPostForm - When user is logged in, show 'create a new post' button at top of homepage. - When user is logged in, show 'edit' button under each post. - Fixed blog post styling to show original whitespace of post.

--- a/client/src/styles/Blog.module.scss
+++ b/client/src/styles/Blog.module.scss
@@ -1,7 +1,10 @@
-.post {
+.postContainer {
   border: 4px solid black;
   margin: 20px 0;
+  white-space: pre;
+}
 
+.post {
   .title {
     color: #A10702;
     font-size: 32px;
